# bebis-online

./: .gitignore  CMakeLists.txt  LICENSE  build.sh  server.py
inc/graphics/: sprite.h
inc/network/: client.h  packet.h
src/: main.c
src/graphics/: sprite.c
src/network/: client.c  packet.c
